+add column "resgistradoPor" to dabaBase SQLite and Firebase +add option "Sincronizar"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,4 +152,5 @@
     <string name="label_linea">Línea</string>
     <string name="label_fecha">Fecha:</string>
     <string name="labelName">Nombre:</string>
+    <string name="action_sincronizar">Sincronizar</string>
 </resources>
