--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,7 +140,7 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="action_reset_profile">Resetear Datos</string>
+    <string name="action_reset_profile">Resetear Firebase</string>
     <string name="buscar_por_provincia">Buscar por Provincia</string>
     <string name="buscar_por_tipo">Buscar por Clasificación del Turismo</string>
     <string name="tipo_etnograf_a_y_folklore">Etnografía y Folklore</string>
@@ -153,7 +153,7 @@
     <string name="label_fecha">Fecha:</string>
     <string name="labelName">Nombre:</string>
     <string name="label_rolUser">Tipo Usuario:</string>
-    <string name="action_sincronizar">Sincronizar</string>
+    <string name="action_sincronizar">Sincronizar SQLite</string>
     <string name="description_imagen">TODO</string>
     <string name="acontecimiento">Acontecimiento:</string>
     <string name="label_audio_guia">Audio Guia</string>
