--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,4 +158,6 @@
     <string name="acontecimiento">Acontecimiento:</string>
     <string name="label_audio_guia">Audio Guia</string>
     <string name="label_trazar_ruta">Trazar Ruta</string>
+    <string name="label_descripcion">Descripción:</string>
+    <string name="label_actividad">Actividad</string>
 </resources>
