--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,4 +162,7 @@
     <string name="label_trazar_ruta">Trazar Ruta</string>
     <string name="label_descripcion">Descripción:</string>
     <string name="label_actividad">Actividad</string>
+    <string name="label_date">Fecha:</string>
+    <string name="label_buscar_imagen">Buscar Imagen</string>
+    <string name="label_guardar_cambios">Guardar Cambios</string>
 </resources>
